--- a/ReValuedCarsAuthAPI/appsettings.json
+++ b/ReValuedCarsAuthAPI/appsettings.json
@@ -4,5 +4,13 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AuthConnection": "Data Source=172.25.163.79;Initial Catalog=ReValuedCarsDB;User ID=sa1;Password=Password123"
+  },
+  "Jwt": {
+    "Secret": "Thisismylengthsecrekeyforencryption",
+    "Issuer": "http://localhost:49834",
+    "Audience": "http://localhost:58960"
+  }
 }
