Azure db changes

--- a/ReValuedCarsAuthAPI/appsettings.json
+++ b/ReValuedCarsAuthAPI/appsettings.json
@@ -6,10 +6,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AuthConnection": "Data Source=172.25.163.79;Initial Catalog=ReValuedCarsDB;User ID=sa1;Password=Password123"
+    //"AuthConnection": "Data Source=172.25.163.79;Initial Catalog=ReValuedCarsDB;User ID=sa1;Password=Password123"
+    "AuthConnection": "Server=tcp:cars1984.database.windows.net,1433;Initial Catalog=AuthDB;Persist Security Info=False;User ID=siva;Password=Password123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Jwt": {
-    "Secret": "Thisismylengthsecrekeyforencryption",
+    "Secret": "ReValuedCarsSecretKeyForEncryption",
     "Issuer": "http://localhost:49834",
     "Audience": "http://localhost:58960"
   }
