--- a/ReValuedCarsAuthAPI/appsettings.json
+++ b/ReValuedCarsAuthAPI/appsettings.json
@@ -12,6 +12,6 @@
   "Jwt": {
     "Secret": "ReValuedCarsSecretKeyForEncryption",
     "Issuer": "https://authapiappdemo.azurewebsites.net",
-    "Audience": "https://carwikaapp.azurewebsites.net"
+    "Audience": "https://carwika.azurewebsites.net"
   }
 }
